--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                     <p class="text-gray-700 mb-4">
                                         Página principal pública para la comunidad universitaria de la facultad, donde se detallan los servicios que brinda la Administración Académica.
                                     </p>
-                                    <a href="#" class="text-indigo-600 font-semibold hover:underline mt-auto">Ver Proyecto</a>
+                                    <a href="https://academicafmo.up.railway.app/" class="text-indigo-600 font-semibold hover:underline mt-auto">Ver Proyecto</a>
                                 </div>
                             </div>
                     
@@ -147,7 +147,7 @@
                                         Además, utiliza un sistema de roles con middlewares para ofrecer experiencias adaptadas a cada perfil, 
                                         permitiendo gestionar sesiones de administrador y asistente de forma eficiente.
                                     </p>
-                                    <a href="#" class="text-indigo-600 font-semibold hover:underline mt-auto">Ver Proyecto</a>
+                                    <a href="https://academicafmo.up.railway.app/" class="text-indigo-600 font-semibold hover:underline mt-auto">Ver Proyecto</a>
                                 </div>
                             </div>
                         </div>
