Add: justificado en parrafo de presentacion

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                         Col. Jardines del Río San Miguel, San Miguel. (+503) 7930-1657 <br>
                         <a href="mailto:delcid47.cruz@gmail.com">delcid47.cruz@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">
-                        Estoy próximo a egresar de la carrera de Ingeniería en Sistemas Informáticos. Durante mi formación académica, he tenido la oportunidad de colaborar con profesionales de mi área, quienes me han guiado en el mundo del desarrollo de software. 
+                    <p class="lead mb-5 text-justify">
+                        Egresado de la carrera de Ingeniería en Sistemas Informáticos. Durante mi formación académica, he tenido la oportunidad de colaborar con profesionales de mi área, quienes me han guiado en el mundo del desarrollo de software. 
                         He trabajado con el framework Laravel PHP para desarrollo web y tengo conocimietos en el diseño e implementación de bases de datos con MySQL y PostgreSQL, así como en Firebase, una base de datos no relacional de Google.
                         Además, cuento con conocimientos en Java para aplicaciones de escritorio y desarrollo de APIs, y he desarrollado aplicaciones móviles en Android Studio utilizando Java.
                         También he adquirido experiencia en redes, simulando redes LAN y WLAN y aplicando conceptos de ruteo y VLANs en Cisco Packet Tracer.
@@ -80,7 +80,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Asistente Administrativo y Desarrollador</h3>
                             <div class="subheading mb-3">Administración Académica FMO</div>
-                            <p>
+                            <p class="text-justify">
                                 Durante mi servicio social, desempeñé tareas administrativas en el sistema PROMETEO de la universidad, gestionando procesos de graduación, expedientes en línea, pagos, y brindando atención a estudiantes de nuevo ingreso. Además de
                                 proveer soporte técnico a usuarios de la oficina y participé en la migración de archivos físicos a formato digital, contribuyendo a la digitalización de procesos administrativos.
                                 Agregado a ello, estuve como desarrollador backend del nuevo sitio web de la Administración Académica de la Facultad Multidisciplinaria Oriental.
@@ -93,7 +93,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Pasante para Proyecto de Carga Académica</h3>
                             <div class="subheading mb-3">Desarrollador</div>
-                            <p>
+                            <p class="text-justify">
                                 Participé en un proyecto de pasantía de 6 meses desarrollando un sistema de carga académica para la Facultad de Oriente, dirigido a los jefes de departamento. El sistema automatiza y simplifica procesos tradicionales, haciéndolos más intuitivos.
                                 Implementé funcionalidades como generación de reportes, asignación de materias, docentes y aulas, y gestión de tipos de contratación.
                                 Mi rol incluyó el desarrollo backend con PHP y Livewire, así como el soporte a usuarios, especialmente en el área de Medicina.
@@ -427,7 +427,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Intereses</h2>
-                    <p>
+                    <p class="text-justify">
                         Me interesa explorar las tecnologías y lenguajes de programación más utilizados en la actualidad. 
                         Disfruto particularmente trabajar con el framework Laravel y me entusiasma investigar 
                         sus últimas versiones y las bibliotecas de PHP que pueden integrarse para mejorar los proyectos. 
@@ -446,7 +446,7 @@
                     </div>
                     
                     <br>
-                    <p class="mb-0">
+                    <p class="text-justify">
                         También me interesa estar al tanto de la situación actual del país y de los avances 
                         tecnológicos que se implementan en diversos sectores. Me llama la atención observar 
                         las interfaces de los sistemas en los negocios y tiendas que frecuento e imaginar 
